--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,3 +2,5 @@ FROM jupyter/datascience-notebook:python-3.8.8
 MAINTAINER MarcoPaspuel
 
 RUN pip3 install tensorflow-data-validation[visualization] --no-cache-dir
+
+RUN pip3 install fastparquet
